// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <MobileMenu
    active="projectsNavBtn"
    headerSubtitle="Overview"
    headerTitle="Projects"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent="No Projects"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-0"
            title="apiUrl1"
          >
            apiUrl1
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              In Progress
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Sed sed risus a nibh Maecenas nec pulvinar ex
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <Styled(Link)
          id="projectName-0"
          to="/project/undefined"
        >
          Project Name
        </Styled(Link)>
        <Styled(Link)
          id="projectDescription-0"
          to="/project/undefined"
        >
          Description
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-1"
            title="apiUrl2"
          >
            apiUrl2
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              Published
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Tadeusz Kosciuszko
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="1"
      >
        <Styled(Link)
          id="projectName-1"
          to="/project/undefined"
        >
          Honec sodales libero non fermentum aliquam
        </Styled(Link)>
        <Styled(Link)
          id="projectDescription-1"
          to="/project/undefined"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
        </Styled(Link)>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`List: Component should render correctly with loading 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <MobileMenu
    active="projectsNavBtn"
    headerSubtitle="Overview"
    headerTitle="Projects"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Projects"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-0"
            title="apiUrl1"
          >
            apiUrl1
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              In Progress
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Sed sed risus a nibh Maecenas nec pulvinar ex
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <Styled(Link)
          id="projectName-0"
          to="/project/undefined"
        >
          Project Name
        </Styled(Link)>
        <Styled(Link)
          id="projectDescription-0"
          to="/project/undefined"
        >
          Description
        </Styled(Link)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)
            id="apiPath-1"
            title="apiUrl2"
          >
            apiUrl2
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              3 months ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              Published
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-2"
            >
              Tadeusz Kosciuszko
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="1"
      >
        <Styled(Link)
          id="projectName-1"
          to="/project/undefined"
        >
          Honec sodales libero non fermentum aliquam
        </Styled(Link)>
        <Styled(Link)
          id="projectDescription-1"
          to="/project/undefined"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
        </Styled(Link)>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`List: Component should render without data 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <MobileMenu
    active="projectsNavBtn"
    headerSubtitle="Overview"
    headerTitle="Projects"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={true}
    noDataContent="No Projects"
  >
    <styled.section />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
